--- a/resume/index.html
+++ b/resume/index.html
@@ -13,15 +13,15 @@
 
   <body>
     <!-- I built this myself-->
+    <div id="container">
 
-      <h1> Talia Y. Dennis </h1>
+      <div id="name"> Talia Y. Dennis </div>
 
-      <strong> Student & Copy Editor </strong>
 
 <br>
     <!--  <img src="TaliaDennis_headshot.jpeg" alt="profile photo of Talia" width=300px> -->
 
-      <ul>
+      <ul class="menu">
         <li><a href="mailto:Tdennis1@terpmail.umd.edu"> Email me </a></li>
 
         <li><a href="https://www.linkedin.com/in/talia-dennis"> LinkedIn</a></li>
@@ -31,63 +31,65 @@
         <li><a href="https://github.com/taliadennis"> GitHub</a></li>
       </ul>
 
-      <p> I am a student working toward degrees in multiplatform journalism and social and cultural history. I have written published articles, which include features, news stories, events, reviews and opinions. Currently, I am focusing on copy editing where I am able to employ my research skills. My journalism experience extends to working at various student publications. </p>
+      <div id="title"> Student & Copy Editor </div>
 
-      <h2> Experience: </h2>
+      <p class="top"> I am a student working toward degrees in multiplatform journalism and social and cultural history. I have written published articles, which include features, news stories, events, reviews and opinions. Currently, I am focusing on copy editing where I am able to employ my research skills. My journalism experience extends to working at various student publications. </p>
 
-        <h3>Copy Editor</h3>
-          <h4>The Diamondback</h4>
-            <h5>January 2019 to present</h5>
+      <div id="sectionheader"> Experience: </div>
 
-              <p>I copy edit articles for the student newspaper twice a week and work in four-hour shifts. On my first day, I caught a sentence in a review that resembled one published in The Washington Post. </p>
+        <div id="jobtitle"> Copy Editor </div>
+          <div id="organization"> The Diamondback </div>
+            <div id="date"> January 2019 to present </div>
 
-        <h3>Copy Editor</h3>
-          <h4>Stories Beneath the Shell</h4>
-            <h5>February 2019 to present</h5>
+              <p class="description">I copy edit articles for the student newspaper twice a week and work in four-hour shifts. On my first day, I caught a sentence in a review that resembled one published in The Washington Post. </p>
 
-              <p>I am responsible for checking two to three articles each week for grammar, spelling, style, accuracy and clarity.</p>
+        <div id="jobtitle"> Copy Editor </div>
+          <div id="organization"> Stories Beneath the Shell </div>
+            <div id="date">February 2019 to present </div>
 
-        <h3>Copy Editor & Staff Writer</h3>
-          <h4>The Writer’s Bloc</h4>
-            <h5>September 2016 to present</h5>
+              <p class="description">I am responsible for checking two to three articles each week for grammar, spelling, style, accuracy and clarity.</p>
 
-              <p>I began as a freelance reporter for the University of Maryland’s online publication for the arts during my freshman year. As a sophomore, I began copy editing while producing clips for my profile. Recently, I have prioritized my copy editing position and will help the managing editor publish and finalize edits of articles.</p>
+        <div id="jobtitle"> Copy Editor & Staff Writer </div>
+          <div id="organization"> The Writer’s Bloc </div>
+            <div id="date"> September 2016 to present </div>
 
-        <h3>Orientation Leader</h3>
-          <h4>Education Abroad</h4>
-            <h5>January 2019</h5>
+              <p class="description">I began as a freelance reporter for the University of Maryland’s online publication for the arts during my freshman year. As a sophomore, I began copy editing while producing clips for my profile. Recently, I have prioritized my copy editing position and will help the managing editor publish and finalize edits of articles.</p>
 
-              <p>I helped international exchange students get accustomed to student-life in the United States and at the University of Maryland. I worked with other leaders to give a presentation on dining on and around the campus. When students had questions I did my best to answer them accurately and honestly. If I did not have the answer, I either asked someone who would know or directed them to another source or individual.</p>
+        <div id="jobtitle"> Orientation Leader </div>
+          <div id="organization"> Education Abroad </div>
+            <div id="date"> January 2019 </div>
 
-        <h3>Intern</h3>
-          <h4>University of Maryland Archives</h4>
-            <h5>November 2018</h5>
+              <p class="description">I helped international exchange students get accustomed to student-life in the United States and at the University of Maryland. I worked with other leaders to give a presentation on dining on and around the campus. When students had questions I did my best to answer them accurately and honestly. If I did not have the answer, I either asked someone who would know or directed them to another source or individual.</p>
 
-              <p>I participated in the Intern-for-a-Day program at the University of Maryland where I learned about the archival process. I helped organized a list of guests and their contact information for an upcoming event and refiled some old documents to an upgraded preservation system.</p>
+        <div id="jobtitle"> Intern </div>
+          <div id="jobtitle"> University of Maryland Archives </div>
+            <div id="date"> November 2018 </div>
 
-      <h3>Committee Member</h3>
-        <h4>Academic Affairs</h4>
-          <h5>September 2017 to May 2018</h5>
+              <p class="description"> I participated in the Intern-for-a-Day program at the University of Maryland where I learned about the archival process. I helped organized a list of guests and their contact information for an upcoming event and refiled some old documents to an upgraded preservation system.</p>
 
-            <p>I served on the Academic Affairs Committee for the Alpha Lambda Delta & Phi Eta Sigma Honor Society chapter at the University of Maryland. My responsibilities included reading students’ scholarship applications and ranking aspects of them to help determine who would receive the funds. It was strictly objective and based only on the information provided.</p>
+      <div id="jobtitle"> Committee Member </div>
+        <div id="organization"> Academic Affairs </div>
+          <div id="date"> September 2017 to May 2018 </div>
 
-      <h3>Server</h3>
-        <h4>Sunrise Grill</h4>
-          <h5>May 2014 to January 2019</h5>
+            <p class="description">I served on the Academic Affairs Committee for the Alpha Lambda Delta & Phi Eta Sigma Honor Society chapter at the University of Maryland. My responsibilities included reading students’ scholarship applications and ranking aspects of them to help determine who would receive the funds. It was strictly objective and based only on the information provided.</p>
 
-            <p>I am a seasonal employee at a local restaurant in my town. I began working as a busser when I was 16 and was promoted to a server when I was 17. It was strengthened my abilities to multitask, work quickly and efficiently, problem-solve and provide instructions and information with clarity. I strive for accuracy to ensure my customers get exactly what they order.</p>
+      <div id="jobtitle"> Server </div>
+        <div id="organization"> Sunrise Grill </div>
+          <div id="date"> May 2014 to January 2019 </div>
+
+            <p class="description">I am a seasonal employee at a local restaurant in my town. I began working as a busser when I was 16 and was promoted to a server when I was 17. It was strengthened my abilities to multitask, work quickly and efficiently, problem-solve and provide instructions and information with clarity. I strive for accuracy to ensure my customers get exactly what they order.</p>
 
 
-      <h2> Education: </h2>
+      <div id="sectionheader"> Education: </div>
 
-        <ul>
+        <ul id="degrees">
           <li>Bachelor of Arts, Journalism and History, University of Maryland, College Park, May  2020</li>
           <li>Study abroad student, University of Brighton, England, September to December 2018</li>
         </ul>
 
-      <h2> Skills: </h2>
+      <div id="sectionheader"> Skills: </div>
 
-        <ul>
+        <ul id="do">
             <li><strong>Organization:</strong> Competent to handle multiple tasks simultaneously and successfully </li>
 
             <li><strong>Research:</strong> Adept at gathering information through a variety of vetted sources </li>
