--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
     </style>
 
   </head>
-
+<!-- the following new comments are commentary to replace me talking aloud to myself -->
   <body>
     <!-- I built this myself-->
     <div id="container">
@@ -30,6 +30,8 @@
 
         <li><a href="https://github.com/taliadennis"> GitHub</a></li>
       </ul>
+<!-- why doesn't this list thing work??? -->
+<!-- oh never mind, thank goodness I finally found it -->
 
       <div id="title"> Student & Copy Editor </div>
 
@@ -60,6 +62,7 @@
             <div id="date"> January 2019 </div>
 
               <p class="description">I helped international exchange students get accustomed to student-life in the United States and at the University of Maryland. I worked with other leaders to give a presentation on dining on and around the campus. When students had questions I did my best to answer them accurately and honestly. If I did not have the answer, I either asked someone who would know or directed them to another source or individual.</p>
+<!-- why did I put so much on this? -->
 
         <div id="jobtitle"> Intern </div>
           <div id="jobtitle"> University of Maryland Archives </div>
@@ -103,5 +106,5 @@
         </ul>
 
   </body>
-
+<!-- remember to submit this... -->
 </html>
