--- a/bootstrap-template.html
+++ b/bootstrap-template.html
@@ -11,6 +11,7 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 
 </head>
@@ -52,8 +53,38 @@
    </form>
  </div>
 </nav>
+<!-- End of Navbar -->
 
-    Hello world!
+<!-- Start of Jumbotron -->
+<div class="jumbotron">
+ <h1 class="display-4">Hello, world!</h1>
+ <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+ <hr class="my-4">
+ <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+ <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+</div>
+<!-- End of Jumbotron -->
+
+<div class="container">
+        <div class="row">
+
+                <div class="col-md-4">
+                        <h3>Heading 1</h3>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                </div>
+
+
+                <div class="col-md-4">
+                        <h3>Heading 2</h3>
+                        <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
+                </div>
+
+                <div class="col-md-4">
+                        <h3>Heading 3</h3>
+                        <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                </div>
+        </div>
+</div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
