--- a/resume/index.html
+++ b/resume/index.html
@@ -9,33 +9,108 @@
 
     </style>
 
+<!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
   </head>
 <!-- the following new comments are commentary to replace me talking aloud to myself -->
   <body>
     <!-- I built this myself-->
+
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-nav" href="#"</a>
+          <img src="images/logo.png" width="90" height="90" alt="icon">
+        </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav mr-auto">
+       <li class="nav-item active">
+         <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+       </li>
+       <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Experience</a>
+       </li>
+       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+         <a class="dropdown-item" href="#">Journalism</a>
+         <a class="dropdown-item" href="#">Other</a>
+       </div>
+       <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           Dropdown
+         </a>
+         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+           <a class="dropdown-item" href="#">Action</a>
+           <a class="dropdown-item" href="#">Another action</a>
+           <div class="dropdown-divider"></div>
+           <a class="dropdown-item" href="#">Something else here</a>
+         </div>
+       </li>
+       <li class="nav-item active">
+         <a class="nav-link" href="#">Contact</a>
+       </li>
+     </ul>
+     <form class="form-inline my-2 my-lg-0">
+       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+       <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+     </form>
+    </div>
+    </nav>
+    <!-- End of Navbar -->
+
+    <!-- Start of Jumbotron -->
+    <div class="jumbotron" style="background-image: url(images/jumbotron.png); background-size: 100%;">
+      <div class="container text-center">
+    <h1 class="display-4">  TALIA Y. DENNIS  </h1>
+    <p class="lead"> ⏤ Student & Copy Editor ⏤</p>
+    <button type="button" class="btn btn-outline-light btn-lg" center-block ><a href= "https://umdwritersbloc.com/?s=talia+dennis" target="_blank">Work</a></button>
+    </div>
+    <!-- End of Jumbotron -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+    <div class="container">
+          <div class="row">
+
+                  <div class="col-md-6">
+
+                          <img src="TaliaDennis_headshot.jpeg" alt="profile photo of Talia" width=300px>
+                  </div>
+
+
+                  <div class="col-md-6">
+                          <h3> About Me </h3>
+                          <p>I am a student working toward degrees in multiplatform journalism and social and cultural history. I have written published articles, which include features, news stories, events, reviews and opinions. Currently, I am focusing on copy editing where I am able to employ my research skills. My journalism experience extends to working at various student publications.</p>
+                  </div>
+
+
+
+          </div>
+    </div>
     <div id="container">
 
-      <div id="name"> Talia Y. Dennis </div>
-
-
-<br>
     <!--  <img src="TaliaDennis_headshot.jpeg" alt="profile photo of Talia" width=300px> -->
 
       <ul class="menu">
-        <li><a href="mailto:Tdennis1@terpmail.umd.edu"> Email me </a></li>
+        <li><a href="mailto:Tdennis1@terpmail.umd.edu" target="_blank"> Email me </a></li>
 
-        <li><a href="https://www.linkedin.com/in/talia-dennis"> LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/talia-dennis" target="_blank"> LinkedIn</a></li>
 
-        <li><a href="https://twitter.com/tyden25">Twitter</a></li>
+        <li><a href="https://twitter.com/tyden25" target="_blank">Twitter</a></li>
 
-        <li><a href="https://github.com/taliadennis"> GitHub</a></li>
+        <li><a href="https://github.com/taliadennis" target="_blank"> GitHub</a></li>
       </ul>
 <!-- why doesn't this list thing work??? -->
 <!-- oh never mind, thank goodness I finally found it -->
-
-      <div id="title"> Student & Copy Editor </div>
-
-      <p class="top"> I am a student working toward degrees in multiplatform journalism and social and cultural history. I have written published articles, which include features, news stories, events, reviews and opinions. Currently, I am focusing on copy editing where I am able to employ my research skills. My journalism experience extends to working at various student publications. </p>
 
       <div id="sectionheader"> Experience: </div>
 
