--- a/resume/index.html
+++ b/resume/index.html
@@ -55,7 +55,7 @@
     <!-- End of Navbar -->
 
     <!-- Start of Jumbotron -->
-    <div class="jumbotron" style="background-image: url(images/jumbotron.png); background-size: 100%; background-repeat: no-repeat;" id="nameplateanchor">
+    <div class="jumbotron" id="nameplateanchor">
       <div class="container text-center">
     <h1 class="display-4">  TALIA Y. DENNIS  </h1>
     <p class="lead"> ⏤ Student & Copy Editor ⏤</p>
@@ -135,15 +135,7 @@
 
     <!--  <img src="TaliaDennis_headshot.jpeg" alt="profile photo of Talia" width=300px> -->
 
-      <ul class="menu">
-        <li><a href="mailto:Tdennis1@terpmail.umd.edu" target="_blank"> Email me </a></li>
 
-        <li><a href="https://www.linkedin.com/in/talia-dennis" target="_blank"> LinkedIn</a></li>
-
-        <li><a href="https://twitter.com/tyden25" target="_blank">Twitter</a></li>
-
-        <li><a href="https://github.com/taliadennis" target="_blank"> GitHub</a></li>
-      </ul>
 <!-- why doesn't this list thing work??? -->
 <!-- oh never mind, thank goodness I finally found it -->
 
@@ -199,9 +191,20 @@
           <li>Bachelor of Arts, Journalism and History, University of Maryland, College Park, May  2020</li>
           <li>Study abroad student, University of Brighton, England, September to December 2018</li>
         </ul>
-
-    
-
   </body>
+  
+  <br>
+  <footer class="footer">
+    <ul class="menu">
+      <li><a href="mailto:Tdennis1@terpmail.umd.edu" target="_blank"> Email me </a></li>
+
+      <li><a href="https://www.linkedin.com/in/talia-dennis" target="_blank"> LinkedIn</a></li>
+
+      <li><a href="https://twitter.com/tyden25" target="_blank">Twitter</a></li>
+
+      <li><a href="https://github.com/taliadennis" target="_blank"> GitHub</a></li>
+    </ul>
+    <p class="minorinfo"> Talia Dennis ©2019 </p>
+  </footer>
 <!-- remember to submit this... -->
 </html>
