--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,7 +8,8 @@
 
   <body>
     <div id="content">
-    Washington Post Headline (please write your own): The rise of Burning Man
+
+    <h1>The appeals of the Burning Man</h1>
 
 
     Subhead: From a huddle of hippies on a beach to a city of 70,000 in the desert, here’s how a festival became a lifestyle.
