unfinished but update

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -2,13 +2,14 @@
   <html lang="eng">
 
   <head>
-    <title>[insert name of page here]</title>
+    <title>Counter-Culture Festivals</title>
       <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
     <div id="content">
 
+<img src="images/banner.png" alt="banner for counter-culture festivals">
     <h1>Burning Man keeps them coming back for more</h1>
       <h3> The appeals of a desert festival attracting tens of thousands of people each year.</h3>
 
@@ -18,7 +19,7 @@
 
     <div id="attribution">The Washington Post</div>
 
-
+<!-- Article begins here -->
 
       <p> Burning Man, a countercultural phenomenon that occurs each year in the middle of the desert, is guided by 10 core principles, including radical inclusion, decommodification, immediacy, participation and leaving no trace. Tens of thousands of “burners” live together for about a week, participating in activities, contributing art, and at the end watching a giant wooden figure, or “The Man” burn to the ground. “The Burning Man is Disneyland in reverse . . . Woodstock turned inside out,” co-founder Larry Harvey told the San Francisco Chronicle in 1996. “It is anything you want it to be.” </p>
 
@@ -26,7 +27,7 @@
 
       <p> It all began in 1986 on Baker Beach near San Francisco, when Harvey and Jerry James set fire to an eight-foot-tall wooden model of a man with approximately 20 bystanders. The growing festival moved from the beach to the desert in 1990. Now, nearly 70,000 people gather for Burning Man each year, inhabitants of a city that pops up and disappears in a matter of weeks. </p>
 
-          <img src="images/burning-man-splash-image.jpg" alt="fiery artwork at Burning Man" class="images">
+          <img src="images/burning-man-splash-image.jpg" alt="fiery artwork at Burning Man" class="imagecenter">
           <p class="caption"> Artwork at the Burning Man Festival <i>(The Washington Post)</i></p>
 
 
@@ -47,7 +48,7 @@
 
       <p>In recent years there has been increased discussion over extravagant spending in preparation for Burning Man by tech elite and celebrities, as well events held by prominent entrepreneurs that attempt to mirror the aesthetic of Burning Man. In 2017, over 75 percent of burners spent more than $1,000 dollars to attend (excluding ticket cost), and more than 50 percent of attendees had a household income below $100,000. </p>
 
-
+<blockquote>"I just feel that it's completely surreal. Every time, it's just like waking up on Christmas morning. I go there and just look around — grown adults created this from scratch! It's a massive community where everybody is coming together to make this amazing event." - Jen Tempchin </blockquote>
 
       <p>Additionally, each year a number of celebrities also attended Burning Man. Kathy Baird, who this year will be participating in her eighth Burning Man, said their presence doesn’t diminish the overall spirit and experience on the playa. “My hope is that regardless of who you are and where you come from, that you could come to an experience like Burning Man … and walk away and be a better human being as a result of your time there,” she said.
 
@@ -106,7 +107,8 @@
 
     <p>"It’s magic. There’s a magic to Black Rock City. The dust is magical. The art that people bring is magical. … We’re building our own environment, and we’re sleeping outdoors, and we’re providing our own resources and taking care of ourselves."</p>
 
-
+    <img src="images/burning-man-time-photo.jpg" alt="people walk through dust at Burning Man" class-"imagecenter">
+    <p class="caption">Burning Man participants walk through dust at the annual Buning Man event on the Black Rock <i>(Time)</i></p>
 
     <p>"I think on a cultural level, it’s kind of a made-up city that happens once a year out there. I don’t know really what it is about it, but it’s a quality and a magic that is really hard to explain to people who haven’t been. There’s a level of realness and authenticity that you feel just upon walking into the festival itself."</p>
 
@@ -158,6 +160,8 @@
 
     <p> Along with its global expansion, the original gathering itself may also be getting bigger. Burning Man is currently seeking a new 10-year permit from the Bureau of Land Management, which oversees the land where it takes place. The environmental impact statement associated with the proposal will examine a population size of 80,000 to 100,000 to assess the impacts to the playa and surrounding areas over the next 10 years. There are no immediate plans to increase the number of participants, but the impacts are being carefully evaluated.</p>
 
+<img src="images/burning-man-map.png" alt="map of regional Burning Man groups" class="imagecenter">
+<p class="caption"> Burning Man regional groups <i>(The Washington Post)</i></p>
 
     <p>The art of Burning Man has also reached further than the Black Rock Desert. And this year in Washington, art and historical documents from Burning Man are being showcased in the Smithsonian’s Renwick Gallery. The exhibit is called “No Spectators,” a common saying on the playa that means active participation by all those in Black Rock City. No one is an audience member of the experience, but instead a part of the experience.</p>
 
