--- a/data-viz/inclass-infographics.html
+++ b/data-viz/inclass-infographics.html
@@ -69,6 +69,10 @@
 <!-- Start Container -->
 <div class="container">
 
+<!-- Map -->
+<iframe src="https://uploads.knightlab.com/storymapjs/6a942305a87f0cc7abb085cf75aa2580/school-shootings-map-s19/index.html" frameborder="0" width="100%" height="800"></iframe>
+
+<br><br>
 
   <!-- first graphic container LINE-->
  <div class="graphic-container">
