--- a/data-viz/test.html
+++ b/data-viz/test.html
@@ -76,21 +76,12 @@
   <h2>How much of each food group should we be eating</h2>
   <p>About half of our diets should consist of fruits and vegetables, based on a 2,000 calorie diet</p>
   <div id="CalorieDiet"></div>
+
+
   <em>Source: Data from ChooseMyPlate.gov</em>
 </div>
 
 <!-- END Pie Chart-->
-
-<br><br>
-
-<!-- Bar Graph on diet types -->
-
-<div class="graphic-container">
-  <h2>Which diet is most followed?</h2>
-  <p>The International Food Information Council Foundation's 13th annual survey found that out of 36 percent of Americans involved in the survey who noted a specific eating pattern ot diet they followed in 2017, intermittent fasting was the most popular at 10 percent. </p>
-  <div id="Dietsfollowed"></div>
-  <em>Source: Data collected by International Food Information Council</em>
-</div>
 
 <!-- END second graphic container-->
 
@@ -111,48 +102,22 @@
 
 
 <!-- c3 script-->
-<script type="text/javascript">
 
-  var chart = c3.generate({
-      bindto: '#CalorieDiet',
-      data: {
-        columns: [
-          ['Vegetables', 28.0],
-          ['Fruits', 22.5],
-          ['Grains', 7.9],
-          ['Protein', 7.6],
-          ['Dairy', 33.8],
-          ['Mixture of saturated fats and added sugars', 0.02],
-
-        ],
-        type : 'pie',
-        onclick: function (d, i) { console.log("onclick", d, i); },
-        onmouseover: function (d, i) { console.log("onmouseover", d, i); },
-        onmouseout: function (d, i) { console.log("onmouseout", d, i); }
-      },
-      color: {
-        pattern: ['#2a8dc5', '#455380', '#ee6a4b', '#60c4b2', '#973895', '#00000',]
-      }
-    });
-
-  var chart2 = c3.generate({
-       bindto: '#Dietsfollowed',
-       data: {
-         columns: [
-           ['Intermittent Fasting', 10],
-           ['Paleo', 7],
-           ['Low-carb', 5],
-           ['Whole30', 5],
-           ['High-protein', 4],
-           ['Ketogenic/high-fat', 3],
-         ],
-         type: 'bar'
-       },
-       color: {
-         pattern: ['#2a8dc5', '#455380', '#ee6a4b', '#60c4b2', '#973895', '#fae255', '#af3d46', '#f8bb63', '#818281']
-       }
-     });
-
+   <script type="text/javascript">
+   //CHART 1
+   var chart = c3.generate({
+     bindto: '#CalorieDiet',
+     data: {
+       x: 'x',
+       columns: [
+         ['x', 2014, 2015, 2016, 2017, 2018],
+         ['Number of xx', 16, 7, 13, 14, 12],
+       ]
+     },
+     color: {
+       pattern: ['#2a8dc5', '#455380', '#ee6a4b', '#60c4b2', '#973895']
+     }
+   });
 </script>
 
 
